Refactors YAPPC 1